[ITB-1924] Support the possibility to deploy a test suite from a URL (through the UI and REST API)
